# buyfast_backend

./: .env.example  Dockerfile  pyproject.toml  requirements.txt  test.json  vercel.json
accounts/: accounts.py  admin.py  apps.py  enums.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customer_model_table_and_more.py  0003_alter_customer_model_table_and_more.py  0004_user_matricula_user_phone_number_and_more.py  0005_alter_user_matricula_alter_user_phone_number_and_more.py
accounts/services/: user_service.py
accounts/tests/: __init__.py  test_delete_account.py  test_me.py  test_signin.py  test_signout.py  test_signup.py
accounts/usecases/: create_user_account.py
accounts/views/: change_password.py  delete_account.py  employee_api_view.py  me_api_view.py  signin_api_view.py  signout_api_view.py  signup_api_view.py  signup_api_view_serializer.py
api/: apps.py  urls.py  utils.py  views.py  views_sandbox.py
books/: admin.py  apps.py  models.py
books/handlers/: books_handler_get.py  books_handler_post.py  books_patch_handler.py
books/migrations/: 0003_alter_book_isbn_alter_book_purchase_cost_and_more.py
cart/: admin.py  apps.py  cart.py  models.py  serializers.py
checkout/: apps.py  checkout.py
config/: settings.py  urls.py  wsgi.py
data_transfer_objects/: ErrorResponse.py
documentation/: basededatos.md  database.dbml
inventory/: admin.py  inventory.py  models.py
orders/: admin.py  apps.py  models.py  orders.py
payment/: apps.py  models.py  payment.py
products/: apps.py  models.py  products.py
seed/: apps.py
(+277 files in other folders)
