[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []   # ← include nothing, this project has no importable packages

[tool.uv.sources]
mediaupload = { path = "packages/mediaupload", editable = true }

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "django==6.0.4",
    "django-taggit==6.1.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "inflection==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "rpds-py==2026.5.1",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2026.1",
    "uritemplate==4.2.0",
    "django-cors-headers==4.9.0",
    "mediaupload",
]